--- a/config.toml
+++ b/config.toml
@@ -13,8 +13,8 @@ title = "Pinchlime"
 
 [markdown]
 # When set to "true", all code blocks are highlighted.
-highlight_code = false
-
+highlight_code = true
+# highlight_theme = "Tomorrow"
 # Whether external links are to be opened in a new tab
 # If this is true, a `rel="noopener"` will always automatically be added for security reasons
 external_links_target_blank = true
@@ -71,7 +71,7 @@ label_category = "分類"
 label_created = "發布於"
 label_home = "首頁"
 label_links = "連結"
-label_new_posts_list_title = "以下是我[最新](/blog/)的 10 篇文章："
+label_new_posts_list_title = "最新文章"
 label_notes_title = "以下是我長期維護和更新的[筆記](/categories/notes/)："
 label_published_on = "Category:"
 label_rating = "我的評分"
