--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ label_new_posts_list_title = "最新文章"
 label_notes_title = "以下是我長期維護和更新的[筆記](/categories/notes/)："
 label_published_on = "分類："
 label_rating = "我的評分"
-label_read_more = "繼續閱讀全文→"
+label_read_more = "繼續閱讀全文 ➞"
 label_reading = "閱讀時間"
 label_rss = "訂閱RSS"
 label_table_contents = "目錄"
