--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ email = "mimir@hey.com"
 theme_color = "#003c6d"
 
 ### THIRD PARTY
-# google_analytics = "UA-188339424-1"
+# google_analytics = "G-JM526KJ2E1"
 
 ### SOCIAL MEDIA
 image = "https://pinchlime.com/logo.png"
