微調 config.toml，把 tags 跟 categories 兩個 taxonomies 的 feeds 及 paginator 開關都關閉，並且也微調了 taxonomy_single 的 if 內容。

--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ description = "介紹生產力工具，以及分享使用心得"
 generate_feed = true
 generate_rss = true
 taxonomies = [
-  {name = "tags", feed = true, paginate_by = 20},
-  {name = "categories", feed = true, paginate_by = 20},
+  {name = "tags"},
+  {name = "categories"},
 ]
 title = "Pinchlime"
 
@@ -92,8 +92,8 @@ generate_rss = true
 highlight_code = true
 smart_punctuation = true
 taxonomies = [
-  {name = "tags", feed = true, paginate_by = 20},
-  {name = "categories", feed = true, paginate_by = 20},
+  {name = "tags"},
+  {name = "categories"},
 ]
 title = "Pinchlime"
 [languages.en.translations]
