--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ taxonomies = [
   {name = "tags"},
   {name = "categories"},
 ]
-title = "Pinchlime"
+title = "Pin 起來！"
 
 [markdown]
 # When set to "true", all code blocks are highlighted.
@@ -55,12 +55,7 @@ twitter_user = "WuPingJu"
 paths = "on"
 taxonomies = "on"
 
-[languages.zh-TW]
-title = "Pin 起來！"
-description = "介紹生產力工具，以及分享使用心得"
-
-
-[languages.zh-TW.translations]
+[translations]
 keywords = "生產力工具, macOS, 專案管理, 任務管理, PM"
 label_all_posts = "[看所有文章](/blog/)"
 label_archive = "全部文章歸檔"
