updated english version of about and some words

--- a/config.toml
+++ b/config.toml
@@ -67,6 +67,7 @@ label_created = "發布於"
 label_home = "首頁"
 label_links = "連結"
 label_new_posts_list_title = "最新文章"
+label_new_newsletters_list_title = "最新電子報"
 label_notes_title = "以下是我長期維護和更新的[筆記](/categories/notes/)："
 label_published_on = "分類："
 label_rating = "我的評分"
@@ -74,8 +75,10 @@ label_read_more = "繼續閱讀全文 ➞"
 label_reading = "閱讀時間"
 label_rss = "訂閱RSS"
 label_table_contents = "目錄"
+label_sorting_articles ="看更多文章"
 label_tag = "標籤"
-label_tags = "標籤"
+label_tags = "依標籤"
+label_timeline = "依時序"
 label_target_language = "English Blog"
 label_taxonomy = "類別"
 label_thoughts_title = "以下是我最近的幾則[短想法](/thoughts/)："
@@ -102,7 +105,8 @@ label_category = "Category"
 label_created = "Published"
 label_home = "Home"
 label_links = "Links"
-label_new_posts_list_title = "Here are my [latest](/en/blog/) 10 articles:"
+label_new_posts_list_title = "[Latest](/en/blog/) articles"
+label_new_newsletters_list_title = "Latest newsletters"
 label_notes_title = "Here are the notes I have been [updating and maintaining for a long time](/en/categories/notes/):"
 label_published_on = "on"
 label_rating = "Rating"
@@ -110,8 +114,10 @@ label_read_more = "Continue to Read"
 label_reading = "Reading Time"
 label_rss = "Subscribe RSS"
 label_table_contents = "On this page"
+label_sorting_articles ="Sort by"
 label_tag = "Tag"
 label_tags = "Tags"
+label_timeline = "Time"
 label_target_language = "中文網站"
 label_taxonomy = "Taxonomy"
 label_thoughts_title = "Here are a few of my latest [short thoughts](/en/thoughts/)："
