updated settings to fit snapshots

--- a/config.toml
+++ b/config.toml
@@ -58,16 +58,21 @@ taxonomies = "on"
 
 [translations]
 keywords = "生產力工具, macOS, 專案管理, 任務管理, PM"
-label_all_posts = "[看所有文章](/blog/)"
-label_archive = "全部文章歸檔"
+label_all_posts = "[看所有文章 ➞](/blog/)"
+label_all_newsletters = "[看所有電子報 ➞](/newsletters/)"
+label_all_snapshots = "[看所有 Snapshots ➞](/snapshots/)"
+label_archive = "Blog 歸檔"
+label_newsletter_archive = "Newsletters 歸檔"
+label_snapshot_archive = "Snapshots 歸檔"
 label_back_to_start = "本文開始"
 label_book_author = "作者"
 label_categories = "所有分類"
+label_kinds = "所有類別"
 label_category = "分類"
 label_created = "發布於"
 label_home = "首頁"
 label_links = "連結"
-label_new_posts_list_title = "最新文章"
+label_new_posts_list_title = "最新 Blog 文章"
 label_new_snapshots_list_title = "最新 Snapshots"
 label_new_newsletters_list_title = "最新電子報"
 label_notes_title = "以下是我長期維護和更新的[筆記](/categories/notes/)："
@@ -77,7 +82,7 @@ label_read_more = "繼續閱讀全文 ➞"
 label_reading = "閱讀時間"
 label_rss = "訂閱RSS"
 label_table_contents = "目錄"
-label_sorting_articles ="看更多文章"
+label_sorting_articles ="看更多"
 label_tag = "標籤"
 label_tags = "依標籤"
 label_timeline = "依時序"
@@ -99,11 +104,16 @@ taxonomies = [
 title = "Pinchlime"
 [languages.en.translations]
 keywords = "Productivity Tools, Project Management, Product Management"
-label_all_posts = "[View all posts](/en/blog/)"
-label_archive = "Archive"
+label_all_posts = "[View all posts ➞](/en/blog/)"
+label_all_newsletters = "[View all newsletters ➞](/en/newsletters/)"
+label_all_snapshots = "[View all snapshots ➞](/en/snapshots/)"
+label_archive = "Blog Archive"
+label_newsletter_archive = "Newsletter Archive"
+label_snapshot_archive = "Snapshot Archive"
 label_back_to_start = "Get Started"
 label_book_author = "Book Author"
 label_categories = "Categories"
+label_kinds = "Kinds"
 label_category = "Category"
 label_created = "Published"
 label_home = "Home"
