try to fix pagefind version problem

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,7 @@
 
 [build]
     publish = "public/"
-    command = "zola build && npx pagefind --source public"
+    command = "zola build && npx pagefind@v0.10.6 --source public"
 
     [build.environment]
          ZOLA_VERSION = "0.16.0"
