--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 
 public
-.obsidian
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
-Icon
-
+.txt
 
 # Thumbnails
 ._*
