--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ include_content = false
 
 [extra]
 author = "P.J. Wu 吳秉儒"
-email = "mimir@hey.com"
+email = "pj@pinchlime.com"
 theme_color = "#003c6d"
 
 ### THIRD PARTY
