--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ base_url = "https://pinchlime.com"
 build_search_index = false
 compile_sass = false
 default_language = "zh-TW"
-description = "介紹生產力工具，以及分享使用心得"
+description = "feedId:41324816676184064+userId:43206110708628480"
 generate_feed = true
 generate_rss = true
 taxonomies = [
