--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ default_language = "zh-TW"
 description = "feedId:41324816676184064+userId:43206110708628480"
 generate_feed = true
 generate_rss = true
+feed_filenames = rss.xml
 taxonomies = [
   {name = "tags", feed = true},
   {name = "categories", feed = true},
